--- a/assets/login/css/main.css
+++ b/assets/login/css/main.css
@@ -146,7 +146,7 @@ iframe {
 .txt2 {
   font-family: Poppins-Regular;
   font-size: 15px;
-  color: #57b846;
+  color: #3e85fa;
   line-height: 1.5;
 }
 
@@ -255,7 +255,7 @@ iframe {
   -moz-transition: all 0.4s;
   transition: all 0.4s;
 
-  background: #57b846;
+  background: #3e85fa;
 }
 
 .focus-input100::after {
@@ -327,7 +327,7 @@ iframe {
   padding: 0 20px;
   width: 100%;
   height: 50px;
-  background-color: #57b846;
+  background-color: #3e85fa;
   border-radius: 25px;
 
   box-shadow: 0 10px 30px 0px rgba(87, 184, 70, 0.5);
